# Hyve

./: .gitattributes  .gitignore  404.html  CMakeLists.txt  Dockerfile  LICENSE  README.md  index.html  main.cxx  main.swift  sitemap.xml  test.cxx
.github/workflows/: release-ubuntu.yaml  release-windows.yaml  release.yaml
assets/js/: 0058b4c6.25d92d37.js  0058b4c6.5c3dffc3.js  0058b4c6.884fded1.js  01a85c17.0c14cb17.js  01a85c17.d71ec393.js  0880d3aa.0ad8fe1a.js  14eb3368.17ce63df.js  14eb3368.668955c8.js  14f949ad.f08e0538.js  17896441.38a6b69d.js  17896441.43e43923.js  1bc1dcd4.2628e8ed.js  1df93b7f.ac8aea30.js  1df93b7f.bdb14f21.js  2069a4f9.eaa3cd4b.js  2237.8ecc215e.js  229707e2.d3ac1ace.js  237.6a9b4715.js  309.b38dfdd0.js  3518bc01.cf56cbbc.js  3518bc01.e65e9823.js  3682e4e8.5d93bd78.js  3682e4e8.bac1bb8c.js  36994c47.7770d780.js  3a2db09e.81f4d0f1.js  3a2db09e.c396013c.js  (+135 more)
ast/: CMakeLists.txt
ast/include/ast/: HAst.hxx  HAstLiteralType.hxx  HAstNode.hxx  HAstNodeType.hxx  HAstOperatorType.hxx  HAstParameter.hxx
ast/include/ast/nodes/: HAstArrayNode.hxx  HAstAssignmentNode.hxx  HAstBinaryExpressionNode.hxx  HAstBlockNode.hxx  HAstClassBodyNode.hxx  HAstClassNode.hxx  HAstExpressionNode.hxx  HAstFileNode.hxx  HAstFuncCallNode.hxx  HAstFuncDeclNode.hxx  HAstIdentifierNode.hxx  HAstImportNode.hxx  HAstInheritanceNode.hxx  HAstInitBodyNode.hxx  HAstInitDeclNode.hxx  HAstInitNode.hxx  HAstLiteralNode.hxx  HAstLocalPropertyDeclNode.hxx  HAstMemberAccessNode.hxx  HAstModuleDeclNode.hxx  HAstObjectLiteralNode.hxx  HAstPropAccessNode.hxx  HAstPropertyDeclNode.hxx  HAstProtocolBodyNode.hxx  HAstProtocolNode.hxx  HAstPrototypeBodyNode.hxx  HAstPrototypeNode.hxx  HAstReturnNode.hxx  HAstStatementNode.hxx  HAstStructBodyNode.hxx  HAstStructNode.hxx  HAstTypeNode.hxx  HAstUnaryExpressionNode.hxx  HAstVarDeclNode.hxx  HAstWithAccessLevelNode.hxx
ast/src/: ast.cxx
blog/: atom.xml  index.html  rss.xml
cli/: CMakeLists.txt
cli/include/cli/: HCLI.hxx  HCLICommand.hxx  HCLICommandParameter.hxx  HCLIInvalidCommandException.hxx
cli/src/: HCLI.cxx
compiler/: CMakeLists.txt
core/: CMakeLists.txt
docs/: 404.html  index.html  sitemap.xml
examples/: annotations.hyve  class.hyve  example.hyve  flow.hyve  main.hyve  protocol.hyve  prototype.hyve  test.hyve
generator/: CMakeLists.txt
generator/include/generator/: HGenerator.hxx
generator/src/: HGenerator.cxx
hir/: CMakeLists.txt
hyvec/: CMakeLists.txt
hyvestd/: build.bat
lexer/: CMakeLists.txt
lexer/include/lexer/: HLexer.hxx  HLexerError.hxx  HProcessor.hxx  HToken.hxx  HTokenGroupings.hxx  HTokenKeywords.hxx  HTokenOperators.hxx  HTokenSpecials.hxx  HTokenStream.hxx  HTokenSymbols.hxx  HTokenType.hxx
lexer/include/lexer/processors/: HControlFlowProcessor.hxx  HGroupingProcessor.hxx  HIdentifierProcessor.hxx  HKeywordProcessor.hxx  HLiteralProcessor.hxx  HNumberProcessor.hxx  HOperatorProcessor.hxx  HPunctuationProcessor.hxx  HSpecialProcessor.hxx
lexer/src/: HLexer.cxx  HTokenStream.cxx
lexer/src/processors/: HControlFlowProcessor.cxx  HGroupingProcessor.cxx  HIdentifierProcessor.cxx  HKeywordProcessor.cxx  HLiteralProcessor.cxx  HNumberProcessor.cxx  HOperatorProcessor.cxx  HPunctuationProcessor.cxx  HSpecialProcessor.cxx
libhyve/: CMakeLists.txt
libhyve/include/libhyve/: HCompiler.hxx  HCompilerArgument.hxx
libhyve/src/: HCompiler.cxx
mangler/: CMakeLists.txt
parser/: CMakeLists.txt
parser/include/parser/: HAst.hxx  HAstNode.hxx  HAstNodeType.hxx  HAstOperatorType.hxx  HAstParameter.hxx  HParser.hxx  HParserContex.hxx  HParserContext.hxx  HParserError.hxx  IHParser.hxx
parser/include/parser/nodes/: HAstArrayNode.hxx  HAstAssignmentNode.hxx  HAstBinaryExpressionNode.hxx  HAstBlockNode.hxx  HAstClassBodyNode.hxx  HAstClassNode.hxx  HAstExpressionNode.hxx  HAstFileNode.hxx  HAstFuncBodyNode.hxx  HAstFuncCallNode.hxx  HAstFuncDeclNode.hxx  HAstIdentifierNode.hxx  HAstImportNode.hxx  HAstInheritanceNode.hxx  HAstInitBodyNode.hxx  HAstInitDeclNode.hxx  HAstInitNode.hxx  HAstLiteralNode.hxx  HAstLocalPropertyDeclNode.hxx  HAstMemberAccessNode.hxx  HAstModuleDeclNode.hxx  HAstPropAccessNode.hxx  HAstPropertyDeclNode.hxx  HAstProtocolBodyNode.hxx  HAstProtocolNode.hxx  HAstPrototypeBodyNode.hxx  HAstPrototypeNode.hxx  HAstReturnNode.hxx  HAstStatementNode.hxx  HAstStructBodyNode.hxx  HAstStructNode.hxx  HAstTypeNode.hxx  HAstUnaryExpressionNode.hxx  HAstVarDeclNode.hxx  HAstWithAccessLevelNode.hxx
parser/include/parser/parsers/: HClassParser.hxx  HEnumParser.hxx  HExpressionParser.hxx  HFuncParser.hxx  HInheritanceParser.hxx  HInitParser.hxx  HModuleParser.hxx  HPropertyParser.hxx  HProtocolParser.hxx  HPrototypeParser.hxx  HStatementParser.hxx  HStructParser.hxx  HTypeParser.hxx  HVariableParser.hxx
parser/src/: HParser.cxx  IHParser.cxx
parser/src/parsers/: HCLassParser.cxx  HEnumParser.cxx  HExpressionParser.cxx  HFuncParser.cxx  HInheritanceParser.cxx  HInitParser.cxx  HModuleParser.cxx  HPropertyParser.cxx  HProtocolParser.cxx  HPrototypeParser.cxx  HStatementParser.cxx  HStructParser.cxx  HTypeParser.cxx  HVariableParser.cxx
runtime/: CMakeLists.txt
runtime/include/runtime/: HGarbageCollector.hxx  HMemory.hxx  HMemoryBlock.hxx  HObject.hxx  HReference.hxx  HRuntime.hxx  HStackframe.hxx  HStacktrace.hxx  HTypeDescriptor.hxx  HVariable.hxx
runtime/src/: HGarbageCollector.cxx  HMemory.cxx  HRuntime.cxx
runtime/src/windows/: HStacktrace.cxx
scripts/: build_hyve_std_lib.bat
tests/: CMakeLists.txt
tests/lexer/: CMakeLists.txt  HLexerTests.cxx
tests/runtime/: CMakeLists.txt  HRuntimeTests.cxx
tools/: INSTALL.bat
typeck/: CMakeLists.txt
typeck/include/typeck/: HPrimitiveTypes.hxx  HSymbol.hxx  HSymbolTable.hxx  HSymbolType.hxx  HType.hxx  HTypeck.hxx
typeck/include/typeck/symbols/: HClassSymbol.hxx  HContractSymbol.hxx  HEnumSymbol.hxx  HFileSymbol.hxx  HFunctionSymbol.hxx  HModuleSymbol.hxx  HPropertySymbol.hxx  HProtocolSymbol.hxx  HPrototypeSymbol.hxx  HStructSymbol.hxx  HVariableSymbol.hxx  HWithAccessLevelSymbol.hxx
typeck/src/: HSymbolTable.cxx  HTypeck.cxx
(+232 files in other folders)
